--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
 <nav class="navbar navbar-expand-sm bg-light navbar-light">
   <!-- Brand/logo -->
-  <a class="navbar-brand" href="#"><h1>doodle demo<small>ER</small></h1></a>
+  <a class="navbar-brand" href="#"><h1>doodle demo<small></small></h1></a>
   </nav>
 <div class="container-fluid"> 
 
