--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
 <!-- bs4 css -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"/>
-
-<!-- css pie -->
-<link rel="stylesheet" href="pie.css">	
 	
+<!-- css pie -->
+<link rel="stylesheet" href="pie.css">
+
 <!-- jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
@@ -53,6 +53,7 @@
 
 </div>  
 </body>
+<script src="pie.js"></script>
 <script>
 	console.log('starting');
 	start('en')
