--- a/index.html
+++ b/index.html
@@ -34,16 +34,18 @@
 <body>
 <nav class="navbar navbar-expand-sm bg-light navbar-light">
   <!-- Brand/logo -->
-  <a class="navbar-brand" href="#"><h1>doodle demo<small></small></h1></a>
+  <a class="navbar-brand" href="#"><h1>doodle demo<small>ER</small></h1></a>
   </nav>
 <div class="container-fluid"> 
 
-
+<blockquote class="blockquote text-justify" style="margin:30px;">
+ 
+  </blockquote>
 </div>
 
 <div class="row">
   <div class="col" style ='margin-left:100px;'>
- 
+<h4 id ='status' >Loading Model... </h4>	  
 <canvas id="canvas" width="300" height="300" class="canvas" style="border:1px solid #b9bfc9;margin-top:25px;"></canvas>
 <div class="btn-group" style = 'margin-top:40px; '>
 <input type="range" min="5" max="20" value="10" class="slider" id="myRange" style ='margin-top:20px;'>
