--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<title>doodle</title>
+<title>Sketcher</title>
 
 <!-- bs4 css -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"/>
@@ -39,8 +39,7 @@
 <div class="container-fluid"> 
 
 <blockquote class="blockquote text-justify" style="margin:30px;">
- 
-  </blockquote>
+   </blockquote>
 </div>
 
 <div class="row">
