--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   <a class="navbar-brand" href="#"><h1>Doodle <small>Demo</small></h1></a>
   </nav>
 
-<div class="row">
-  <div class="col" style ='margin-left:100px;'>
+<div>
+  <div  style ='margin:20px;'>
 <h4 id ='status' >Loading Model... </h4>	  
 <canvas id="canvas" width="500" height="500" class="canvas" style="border:1px solid #b9bfc9;margin-top:25px;"></canvas>
 <div class="btn-group" style = 'margin-top:40px; '>
