--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </nav>
 
 <div class="row">
-  <div class="col" style ='margin-left:100px;'>
+  <div style ='margin:20px;'>
 <h4 id ='status' >Loading Model... </h4>	  
 <canvas id="canvas" width="300" height="300" class="canvas" style="border:1px solid #b9bfc9;margin-top:25px;"></canvas>
 <div class="btn-group" style = 'margin-top:40px; '>
