--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <div >
     <section style="margin-top:20px">
     
-    <ul>
+    <ul class="pieID legend">
       <li>
         <em id = "sym1"></em>
         <span id = "prob1" ></span>
