--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 <button type="button" class="btn btn-outline-primary" onclick ='erase()' style ='margin-left:10px;' disabled>Clear</button>
     </div>   
 </div>
-  <div >
-   <section style="margin-top:120px">
+ <div class="col">
+    <section style="margin-top:120px">
     <div class="pieID pie">
       
     </div>
