--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <button type="button" class="btn btn-outline-primary" onclick ='erase()' style ='margin-left:10px;' disabled>Clear</button>
     </div>   
 </div>
-  <div class="col">
+  <div>
     <section style="margin-top:120px">
     <div class="pieID pie">
       
