--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <button type="button" class="btn btn-outline-primary" onclick ='erase()' style ='margin-left:10px;' disabled>Clear</button>
 </div>   
 </div>
-  <div>
+  <div class="col">
     <section style="margin-top:20px">
     <div class="pieID pie">
     </div>
