--- a/index.html
+++ b/index.html
@@ -37,19 +37,21 @@
   <a class="navbar-brand" href="#"><h1>Doodle <small>Demo</small></h1></a>
   </nav>
 
-<div >
-  <div  style ='margin-left:20px;'>
+
+<div class="row">
+  <div class="col" style ='margin-left:100px;'>
 <h4 id ='status' >Loading Model... </h4>	  
-<canvas id="canvas" width="300" height="500" class="canvas" style="border:1px solid #b9bfc9;margin-top:25px;"></canvas>
+<canvas id="canvas" width="300" height="300" class="canvas" style="border:1px solid #b9bfc9;margin-top:25px;"></canvas>
 <div class="btn-group" style = 'margin-top:40px; '>
+<input type="range" min="5" max="20" value="10" class="slider" id="myRange" style ='margin-top:20px;'>
 <button type="button" class="btn btn-outline-primary" onclick ='erase()' style ='margin-left:10px;' disabled>Clear</button>
-</div>   
+    </div>   
 </div>
   <div class="col">
-    <section style="margin-top:20px">
+    <section style="margin-top:120px">
     <div class="pieID pie">
+      
     </div>
-	    
     <ul class="pieID legend">
       <li>
         <em id = "sym1"></em>
