--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
 <div class="row">
-  <div class="col" style ='margin-left:100px;'>
+  <div style ='margint:20px;'>
 <h4 id ='status' >Loading Model... </h4>	  
 <canvas id="canvas" width="300" height="300" class="canvas" style="border:1px solid #b9bfc9;margin-top:25px;"></canvas>
 <div class="btn-group" style = 'margin-top:40px; '>
@@ -47,7 +47,7 @@
 <button type="button" class="btn btn-outline-primary" onclick ='erase()' style ='margin-left:10px;' disabled>Clear</button>
     </div>   
 </div>
-  <div class="col">
+  <div>
     <section style="margin-top:120px">
     <div class="pieID pie">
       
