--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 </div>
   <div>
     <section style="margin-top:20px">
-   
+       <div class="pieID pie">
+      
+    </div>
     <ul class="pieID legend">
       <li>
         <em id = "sym1"></em>
